--- a/app/src/main/res/layout/activity_subscribe.xml
+++ b/app/src/main/res/layout/activity_subscribe.xml
@@ -3,20 +3,17 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scrollSubs"
     android:layout_width="fill_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:orientation="vertical"
+    android:layout_height="fill_parent">
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:weightSum="6">
+        android:layout_height="wrap_content">
 
 
 
         <EditText
             android:id="@+id/editName"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="80dp"
             android:inputType="textPersonName"
             android:hint="@string/nom"
             android:textSize="20dp"/>
@@ -24,8 +21,8 @@
         <EditText
             android:id="@+id/editSurname"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="80dp"
+            android:layout_below="@+id/editName"
             android:inputType="textPersonName"
             android:hint="Prénom"
             android:textSize="20dp"/>
@@ -33,9 +30,9 @@
 
         <EditText
             android:id="@+id/editCompany"
+            android:layout_below="@+id/editSurname"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="80dp"
             android:inputType="textPersonName"
             android:hint="Société"
             android:textSize="20dp"/>
@@ -46,8 +43,8 @@
         <EditText
             android:id="@+id/CountryCode"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="80dp"
+            android:layout_below="@+id/editCompany"
             android:inputType="number"
             android:hint="Département"
             android:textSize="20dp"/>
@@ -56,8 +53,8 @@
         <EditText
             android:id="@+id/editMail"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="80dp"
+            android:layout_below="@+id/CountryCode"
             android:inputType="textEmailAddress"
             android:hint="Adresse Mail"
             android:textSize="20dp"/>
@@ -65,8 +62,8 @@
         <EditText
             android:id="@+id/editPassword"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="80dp"
+            android:layout_below="@+id/editMail"
             android:inputType="textPassword"
             android:hint="Mot de Passe"
             android:textSize="20dp"/>
@@ -74,17 +71,50 @@
         <EditText
             android:id="@+id/editConfirm"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="80dp"
+            android:layout_below="@+id/editPassword"
             android:inputType="textPassword"
             android:hint="Confirmer Mot de Passe"
             android:textSize="20dp"/>
+        
+        <LinearLayout
+            android:id="@+id/myCheck"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal"
+            android:layout_below="@+id/editConfirm"
+            android:weightSum="7">
+            <CheckBox
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/editConfirm"
+                android:id="@+id/checkBox"
+                android:textSize="20dp"
+                android:layout_gravity="center_vertical"
+                android:text=""
+                android:clickable="true"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="5"
+                android:clickable="true"
+                android:id="@+id/CGU"
+                android:text="CGU"
+                android:textSize="30dp"
+                android:textColor="#0469BA"
+                android:textStyle="bold"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent" />
+
+        </LinearLayout>
+
+
 
         <Button
             android:id="@+id/btnSubs"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="80dp"
+            android:layout_below="@+id/myCheck"
             android:background="#0469BA"
             android:textColor="@android:color/white"
             android:text="S'INSCRIRE"
@@ -92,6 +122,8 @@
             android:textStyle="bold"
             android:textSize="30dp" />
 
-    </LinearLayout>
+
+
+    </RelativeLayout>
 
 </ScrollView>
