--- a/app/src/main/res/layout/fragment_depannage.xml
+++ b/app/src/main/res/layout/fragment_depannage.xml
@@ -7,6 +7,7 @@
     tools:context="com.example.hatim.locnacelle.DepannageFragment">
 
     <LinearLayout
+        android:paddingTop="0dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
