--- a/app/src/main/res/layout/fragment_element.xml
+++ b/app/src/main/res/layout/fragment_element.xml
@@ -5,6 +5,7 @@
     android:layout_width="fill_parent">
 
     <LinearLayout
+        android:paddingTop="0dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
