--- a/app/src/main/res/layout/fragment_inside_drawer.xml
+++ b/app/src/main/res/layout/fragment_inside_drawer.xml
@@ -12,7 +12,8 @@
         android:weightSum="6"
         android:background="#006ab8">
 
-        <Button
+        <ImageButton
+            android:id="@+id/homeButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -24,10 +25,12 @@
             android:src="@drawable/locnacellelogo"
             android:scaleType="fitCenter"
             android:layout_weight="4" />
-        <Button
+
+        <ImageButton
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:id="@+id/closeButton"
             android:background="@drawable/close"/>
 
     </LinearLayout>
