--- a/app/src/main/res/layout/fragment_society.xml
+++ b/app/src/main/res/layout/fragment_society.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute         irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum"
-        android:layout_below="@+id/textView6"
+        android:layout_below="@id/textView6"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
